--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,15 @@ body {
 }
 
 .navbar {
-    width: 100%;
+    position: fixed; /* Fix the navbar to the top */
+    top: 0; /* Align it to the top */
+    left: 0; /* Align it to the left */
+    width: 100%; /* Full width */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    z-index: 1000; /* Ensure it stays above other content */
 }
 
 .site-name h1 {
@@ -99,6 +103,12 @@ a {
 }
 
 .introduction-text h1 {
+    font-family: "Courier Prime", sans-serif;
+    font-size: 400%;
+    margin: 10px 0;
+}
+
+.projects-title h1 {
     font-family: "Courier Prime", sans-serif;
     font-size: 400%;
     margin: 10px 0;
@@ -184,4 +194,59 @@ a {
     to {
         width: 6ch; /* Matches the width of "kelly." */
     }
+}
+
+
+/* Projects Page */
+
+.projects-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.projects-title {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.projects-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    flex-basis: 30%; /* Controls the width of each item */
+    max-width: 85%;  /* Limits the maximum width */
+    min-width: 85%;  /* Ensures a minimum width */
+    margin: 15px;    /* Optional: Adds some margin between items */
+    padding: 20px;
+    font-size: 14px;
+}
+
+.project-line {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 2%;
+}
+
+.project img {
+    width: 100%;        /* Makes the image take up the full width of the item */
+    height: auto;       /* Maintains the aspect ratio of the image */
+    object-fit: cover;  /* Ensures the image covers the item container without distortion */
+    border-radius: 8px; /* Optional: adds rounded corners to the image */
+}
+
+.glass {
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
