--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Ubuntu Mono', monospace, sans-serif;
     height: 100vh;
     width: 100vw;
-    overflow: hidden; /* Prevent scrolling */
+    overflow: auto; /* Prevent scrolling */
     display: flex;
     flex-direction: column;
     justify-content: center; /* Center vertically */
