--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,16 @@ body {
     font-family: 'Ubuntu Mono', monospace, sans-serif;
     height: 100vh;
     width: 100vw;
-    overflow: auto; /* Prevent scrolling */
+    overflow-x: hidden; /* Prevent horizontal scrolling */
     display: flex;
     flex-direction: column;
     background: linear-gradient(45deg, #593C8F, #322E18);
-    background-size: 400% 400%;
+    background-size: 100% 100%; /* Ensure the background fully covers the viewport */
+    background-repeat: no-repeat; /* Prevent background repetition */
+    background-attachment: fixed; /* Makes the background stay fixed on scroll */
     animation: gradient 20s ease infinite;
     color: white;
+    max-width: 100%;
 }
 
 .navbar {
@@ -44,6 +47,13 @@ body {
     padding: 40px;
     width: 100%; /* Full width */
     flex-grow: 1;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
 }
 
 p {
@@ -119,12 +129,6 @@ a {
 }
 
 .introduction-text h1 {
-    font-family: "Courier Prime", sans-serif;
-    font-size: 400%;
-    margin: 10px 0;
-}
-
-.projects-title h1 {
     font-family: "Courier Prime", sans-serif;
     font-size: 400%;
     margin: 10px 0;
@@ -217,12 +221,19 @@ a {
 .projects-section {
     display: flex;
     flex-direction: column;
+    padding: 10px;
 }
 
 .projects-title {
     display: flex;
     justify-content: center;
     padding: 20px;
+}
+
+.projects-title h1 {
+    font-family: "Courier Prime", sans-serif;
+    font-size: 400%;
+    margin: 10px 0;
 }
 
 /* This only changes this particular animation duration */
@@ -255,13 +266,6 @@ a {
     padding-bottom: 2%;
 }
 
-.project img {
-    width: 100%;        /* Makes the image take up the full width of the item */
-    height: auto;       /* Maintains the aspect ratio of the image */
-    object-fit: cover;  /* Ensures the image covers the item container without distortion */
-    border-radius: 8px; /* Optional: adds rounded corners to the image */
-}
-
 .glass {
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
@@ -269,4 +273,86 @@ a {
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+}
+
+/* About Page */
+.about-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.about-avatar {
+    width: 150px;        /* Set a fixed width */
+    height: auto;        /* Keep the aspect ratio intact */
+    object-fit: cover;   /* Ensures the image covers the container without distortion */
+    border-radius: 8px;  /* Optional: adds rounded corners to the image */
+    margin-bottom: 20px; /* Adds some spacing below the image */
+}
+
+.about-intro {
+    background-color: green;
+}
+
+/* Experience Page */
+.experience-section {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.experience-title {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.experience-title h1 {
+    font-family: "Courier Prime", sans-serif;
+    font-size: 400%;
+    margin: 10px 0;
+}
+
+.experience-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.tool {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center content within the container */
+    justify-content: center; /* Center content vertically */
+    border-radius: 10px;
+    flex-basis: 30%;
+    margin: 15px;
+    padding: 20px;
+    font-size: 14px;
+    
+    max-width: 40%;  /* Limits the maximum width */
+    min-width: 40%;  /* Ensures a minimum width */
+    
+    height: 250px; /* Set a fixed height for all tool boxes */
+    flex-grow: 1;
+    flex-shrink: 1; /* Allow containers to shrink or grow proportionally */
+}
+
+.tool h3 {
+    text-align: center;
+}
+
+.tool img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%; /* Ensure the image takes up the full width of the container */
+    height: auto; /* Maintain aspect ratio */
+    max-height: 150px; /* Set a maximum height for all images to be equal */
+    object-fit: contain; /* Ensures the image scales to fit within the container without distortion */
+    padding-bottom: 20px;
 }
