--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 25px;
     z-index: 1000; /* Ensure it stays above other content */
     background-color: transparent; /* Default transparent background */
 }
@@ -105,6 +105,9 @@ a {
 }
 
 .hamburger {
+    position: absolute; /* Set position to absolute */
+    top: 20px; /* Adjust the top position as needed */
+    right: 20px; /* Adjust the right position as needed */
     display: none;
     cursor: pointer;
     font-size: 30px;
@@ -497,7 +500,21 @@ a {
 
 /* For small screens (e.g., phones) */
 @media (max-width: 768px) {
+    .main {
+        flex-direction: column; /* Stack items vertically */
+    }
+
     .tool {
         width: 100%; /* 1 tool per row */
+    }
+
+    /* Adjust title sizes */
+    .page-title {
+        font-size: 24px; /* Adjust the size to your preference */
+    }
+
+    .about-group {
+        display: flex;
+        flex-direction: column;
     }
 }
