--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ body {
 /* Main content Flexbox */
 .main {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center; /* Center the main content horizontally */
     align-items: center;
     padding: 40px;
@@ -143,14 +144,6 @@ a {
     font-family: "Courier Prime", sans-serif;
     font-size: 400%;
     margin: 10px 0;
-}
-
-.typing {
-    border-right: 5px solid;
-    width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    animation: typing 1.1s steps(6), cursor .5s step-end infinite alternate;
 }
 
 .qualifications {
@@ -337,6 +330,7 @@ a {
     justify-content: center;   /* Center the image horizontally */
     align-items: flex-start;   /* Align the image at the top */
     padding: 20px;             /* Optional: Add some padding */
+    max-width: 700px;
 }
 
 .about-img img {
@@ -420,6 +414,14 @@ a {
     }
 }
 
+.typing {
+    border-right: 5px solid;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 1.1s steps(6), cursor .5s step-end infinite alternate;
+}
+
 /* Cursor blinking */
 @keyframes cursor {
     50% {
@@ -431,6 +433,9 @@ a {
 @keyframes typing {
     from {
         width: 0;
+    }
+    to {
+        width: 100%;
     }
 }
 
