--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .navbar {
-    position: fixed; /* Fix the navbar to the top */
+    position: relative; /* Fix the navbar to the top */
     top: 0; /* Align it to the top */
     left: 0; /* Align it to the left */
     width: 100%; /* Full width */
@@ -133,6 +133,11 @@ a {
 }
 
 .introduction-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: auto;
     flex: 0;
     font-size: 180%;
     margin-right: 30px; /* Space between text and image */
@@ -172,7 +177,7 @@ a {
 .projects-section {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 5px;
 }
 
 .projects-title {
@@ -238,7 +243,7 @@ a {
     align-items: center;
     justify-content: center;
     width: 100%;
-    padding: 20px;
+    padding: 5px;
 }
 
 .experience-title {
@@ -321,7 +326,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
 }
 
 .about-img {
